[gd_scene load_steps=18 format=2]

[ext_resource path="res://arts/collectibles/spaceGem_001.png" type="Texture" id=1]
[ext_resource path="res://scenes/collectibles/Gem.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/Basic/BasicCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle9.png" type="Texture" id=5]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle7.png" type="Texture" id=6]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle5.png" type="Texture" id=7]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle4.png" type="Texture" id=8]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle2.png" type="Texture" id=9]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle10.png" type="Texture" id=10]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle8.png" type="Texture" id=11]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle3.png" type="Texture" id=12]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle6.png" type="Texture" id=13]
[ext_resource path="res://arts/collectibles/collect_animation/Explosion_blue_circle1.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "explosion",
"speed": 24.0
} ]

[node name="Gem" groups=["collectibles"] instance=ExtResource( 3 )]
script = ExtResource( 2 )
max_speed = 1200.0
max_health = 10.0
steering_factor = 0.04
item_cost = 1
collect_radius = 400
life_time = 10.0

[node name="HealthBar" parent="." index="0"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot" index="0"]
scale = Vector2( 0.1, 0.1 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollectArea" type="Area2D" parent="Areas" index="0"]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/CollectArea" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="." index="3"]
shape = SubResource( 1 )

[node name="HitBox" parent="." index="4"]
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="LifeTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="AnimatedSprite" parent="." index="6"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )

[connection signal="area_entered" from="Areas/CollectArea" to="." method="_on_CollectArea_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
